Did some editing

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
 
-    <link type="text/css" href="style.scss" />
+    <link type="text/css" href="./CSS/style.scss" />
   </head>
   <body>
     <!-- Building the navbar -->
 
     <nav
-      class="navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body"
+      class="ps-3 navbar navbar-expand-lg bg-body-tertiary bg-dark border-bottom border-body"
       data-bs-theme="dark"
     >
-      <div class="container-fluid p-2">
+      <div class="container-fluid p-1">
         <a class="navbar-brand" href="#">My Planner</a>
         <button
           class="navbar-toggler"
@@ -80,7 +80,7 @@
     <!-- Hero section -->
 
     <div class="position-relative">
-      <img class="w-100 vw-50" src="/images/time.jpg" />
+      <img class="w-100 vw-50" src="images/time.jpg" />
       <h5
         class="position-absolute top-50 start-50 translate-middle p-4 bg-black bg-opacity-50 text-white"
       >
@@ -92,7 +92,7 @@
 
     <div class="d-flex justify-content-around">
       <h5 class="d-flex align-items-center">Weekly Tasks</h5>
-      <button class="m-3" id="smt">Sort by Importance</button>
+      <button class="m-3 btn btn-warning" id="smt">Sort by Importance</button>
     </div>
 
     <!-- Bootstrap card -->
@@ -164,7 +164,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <script src="/JS/data.js"></script>
-    <script src="/JS/main.js"></script>
+    <script src="./JS/data.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
